# umbrella

./: .dockerignore  .envrc  .gitignore  AGENT.md  AGENTS.md  Dockerfile  LCOV_PARTIALS_AS_HITS.md  Makefile  README.md  VERSION  celery_config.py  ci-tests.docker-compose.yml  codecov.test.yml  codecov.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.in  requirements.txt  ruff.toml  worker.sh  worker_app.py  worker_main.py
apps/codecov-api/: Makefile  README.md  api.sh  backfill_owner_external_ids.py  codecov.yml  conftest.py  enterprise.sh  migrate.sh  migrate_timeseries.py  mypy.ini  pyproject.toml
apps/codecov-api/api/gen_ai/: views.py
apps/codecov-api/api/sentry/: urls.py  views.py
apps/codecov-api/api/shared/: serializers.py
apps/codecov-api/billing/: constants.py  helpers.py  views.py
apps/codecov-api/billing/tests/: test_apply_subscription_schedules.py  test_views.py
apps/codecov-api/codecov/: admin.py  apps.py  sentry_sampling.py  settings_base.py  settings_dev.py  settings_prod.py  settings_staging.py  settings_test.py  urls.py
apps/codecov-api/codecov/commands/: exceptions.py
apps/codecov-api/codecov/tests/: test_sentry_sampling.py
apps/codecov-api/codecov_auth/: admin.py  apps.py  backends.py  constants.py  helpers.py  middleware.py  urls.py
apps/codecov-api/codecov_auth/authentication/: repo_auth.py  types.py
apps/codecov-api/codecov_auth/services/: owner_reconnect.py
apps/codecov-api/codecov_auth/tests/: test_admin.py  test_admin_rbac.py  test_middleware.py  test_signals.py
apps/codecov-api/codecov_auth/views/: base.py  bitbucket.py  bitbucket_server.py  github.py  github_enterprise.py  gitlab.py  gitlab_enterprise.py  okta_admin.py  okta_cloud.py  sentry.py
apps/codecov-api/compare/: admin.py
apps/codecov-api/core/: admin.py  admin_dlq.py  forms.py
apps/codecov-api/core/tests/: test_admin.py  test_admin_dlq.py  test_backfill_owner_external_ids.py  test_management_commands.py  test_managers.py
apps/codecov-api/graphql_api/: urls.py  views.py
apps/codecov-api/graphql_api/actions/: flags.py  repository.py
apps/codecov-api/graphql_api/helpers/: connection.py  mutation.py
apps/codecov-api/graphql_api/tests/: test_bundle_analysis_measurements.py  test_commit.py  test_components.py  test_config.py  (+15 more)
apps/codecov-api/graphs/: views.py
apps/codecov-api/labelanalysis/: views.py
apps/codecov-api/redis_admin/: README.md  __init__.py  admin.py  apps.py  conn.py  families.py  models.py  public_bot_usage_queryset.py  queryset.py  services.py  settings.py
apps/codecov-api/reports/: admin.py
apps/codecov-api/rollouts/: __init__.py
apps/codecov-api/services/: billing.py  bundle_analysis.py  comparison.py  path.py  repo_providers.py  self_hosted.py  yaml.py
apps/codecov-api/staticanalysis/: serializers.py  views.py
apps/codecov-api/timeseries/: admin.py  helpers.py
apps/codecov-api/upload/: constants.py  helpers.py  serializers.py  throttles.py  urls.py
apps/codecov-api/utils/: test_results.py  timescale_test_results.py
apps/codecov-api/validate/: views.py
apps/codecov-api/webhook_handlers/: constants.py  helpers.py  urls.py
apps/worker/: IDLE_TRANSACTION_TIMEOUT_CASES.md  LICENSE.md  Makefile  PER_TASK_SESSION_IMPLEMENTATION.md  PER_TASK_SESSION_SOLUTION.md  app.py  celery_config.py  celery_task_router.py  codecov.yml  conftest.py  main.py  manage.py  migrate_timeseries.py  mypy.ini  pyproject.toml  worker.sh
apps/worker/database/: engine.py  enums.py  events.py  utils.py
apps/worker/django_scaffold/: settings_prod.py  settings_test.py
apps/worker/helpers/: admins.py  backfills.py  broker_resilience.py  exceptions.py  log_context.py  metrics.py  notifier.py  sentry.py  string.py  ta_status.py  token_refresh.py
apps/worker/rollouts/: __init__.py
apps/worker/services/: activation.py  ai_pr_review.py  comment.py  commit_status.py  decoration.py  github.py  github_marketplace.py  lock_manager.py  owner.py  repository.py  seats.py  smtp.py  test_results.py  timeseries.py  urls.py
apps/worker/tasks/: __init__.py  activate_account_user.py  ai_pr_review.py  backfill_existing_gh_app_installations.py  backfill_owners_without_gh_app_installations.py  base.py  brolly_stats_rollup.py  bundle_analysis_notify.py  bundle_analysis_processor.py  bundle_analysis_save_measurements.py  cache_test_rollups.py  cache_test_rollups_redis.py  commit_update.py  compute_comparison.py  compute_component_comparison.py  compute_flag_comparison.py  crontasks.py  delete_owner.py  detect_flakes.py  dlq_recovery.py  export_owner_data.py  export_test_analytics_data.py  flush_repo.py  github_app_webhooks_check.py  github_marketplace.py  health_check.py  hourly_check.py  http_request.py  ingest_testruns.py  label_analysis.py  manual_trigger.py  mark_owner_for_deletion.py  new_user_activated.py  notify.py  notify_error.py  plan_manager_task.py  preprocess_upload.py  process_flakes.py  process_owners_to_be_deleted_cron.py  save_commit_measurements.py  (+22 more)
apps/worker/templates/: base.html  failed-payment.html  failed-payment.txt  success-after-failed-payment.html  success-after-failed-payment.txt
libs/shared/: README.md  codecov.yml  mypy.ini  pyproject.toml
libs/shared/shared/: celery_config.py  celery_router.py
libs/shared/tests/: conftest.py
(+1260 files in other folders)
