[project]
name = "codecov-api"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodataloader>=0.4.2",
    "ariadne-django>=0.3.0",
    "ariadne>=0.26.2",
    "celery>=5.5.2",
    "cerberus>=1.3.7",
    "certifi>=2025.4.26",
    "django-autocomplete-light>=3.12.1",
    "django-better-admin-arrayfield>=1.4.2",
    "django-cors-headers>=4.7.0",
    "django-csp>=4.0",
    "django-cursor-pagination>=0.3.0",
    "django-filter>=25.1",
    "django-model-utils>=5.0.0",
    "django-postgres-extra>=2.0.8",
    "django-prometheus>=2.3.1",
    "django<5",
    "djangorestframework>=3.16.0",
    "drf-spectacular-sidecar>=2025.5.1",
    "drf-spectacular>=0.28.0",
    "google-cloud-pubsub>=2.29.0",
    "gunicorn>=23.0.0",
    "idna>=3.10",
    "minio>=7.2.15",
    "multidict>=6.4.4",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=3.3.0",
    "python-redis-lock>=4.0.0",
    "redis>=6.1.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "shared",
    "simplejson>=3.20.1",
    "starlette>=0.46.2",
    "stripe>=12.1.0",
    "whitenoise>=6.9.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
required-version = ">=0.7.5"
dev-dependencies = [
    "factory-boy>=3.3.3",
    "fakeredis>=2.29.0",
    "freezegun>=1.5.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-insta>=0.3.0",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "vcrpy>=7.0.0",
]

[tool.uv.sources]
shared = { path = "../../libs/shared" }
