[project]
name = "worker"
version = "0.1.0"
description = "The codecov worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref>=3.8.1",
    "celery>=5.5.2",
    "click>=8.2.1",
    "codecov-ribs>=0.1.18",
    "django-postgres-extra>=2.0.8",
    "django<5",
    "google-cloud-pubsub>=2.29.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=5.4.0",
    "mmh3>=5.1.0",
    "multidict>=6.4.4",
    "openai>=1.79.0",
    "orjson>=3.10.18",
    "polars>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.4",
    "pyjwt>=2.10.1",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=3.3.0",
    "python-redis-lock>=4.0.0",
    "pyyaml>=6.0.2",
    "redis>=6.1.0",
    "regex>=2024.11.6",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "shared",
    "sqlalchemy<2",
    "sqlparse>=0.5.3",
    "statsd>=3.3.0",
    "stripe>=12.1.0",
    "test-results-parser",
    "timestring",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.uv]
required-version = ">=0.7.5"
dev-dependencies = [
    "coverage>=7.8.0",
    "factory-boy>=3.3.3",
    "mock>=5.2.0",
    "pytest-asyncio>=0.26.0",
    "pytest-celery>=1.2.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-freezegun>=0.4.2",
    "pytest-insta>=0.3.0",
    "pytest-mock>=3.14.0",
    "pytest-sqlalchemy>=0.3.0",
    "pytest>=8.3.5",
    "respx>=0.22.0",
    "sqlalchemy-utils>=0.41.2",
    "vcrpy>=7.0.0",
]

[tool.uv.sources]
timestring = { git = "https://github.com/codecov/timestring", rev = "d37ceacc5954dff3b5bd2f887936a98a668dda42" }
test-results-parser = { git = "https://github.com/codecov/test-results-parser", rev = "f4f44a3a144471c2b304ed1a6d03945a6d00bd84" }
shared = { path = "../../libs/shared" }
