[project]
name = "shared"
version = "0.1.0"
description = "Shared code used in codecov API and worker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amplitude-analytics>=1.1.5",
    "cachetools>=5.5.2",
    "cerberus>=1.3.7",
    "codecov-ribs>=0.1.18",
    "colour>=0.1.5",
    "cryptography>=45.0.2",
    "django-better-admin-arrayfield>=1.4.2",
    "django-model-utils>=5.0.0",
    "django-postgres-extra>=2.0.8",
    "django-prometheus>=2.3.1",
    "django<5",
    "google-auth>=2.40.1",
    "google-cloud-pubsub>=2.29.0",
    "httpx>=0.28.1",
    "ijson>=3.4.0",
    "minio>=7.2.15",
    "mmh3>=5.1.0",
    "msgpack>=1.1.0",
    "oauthlib>=3.2.2",
    "orjson>=3.10.18",
    "prometheus-client>=0.22.0",
    "pydantic>=2.11.4",
    "pyjwt>=2.10.1",
    "pyparsing>=3.2.3",
    "python-redis-lock>=4.0.0",
    "pyyaml>=6.0.2",
    "redis>=6.1.0",
    "requests>=2.32.3",
    "sentry-sdk>=2.29.1",
    "sqlalchemy<2",
    "zstandard>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.7.5"
dev-dependencies = [
    "factory-boy>=3.3.3",
    "freezegun>=1.5.1",
    "mock>=5.2.0",
    "psycopg2-binary>=2.9.10",
    "pytest-asyncio>=0.26.0",
    "pytest-codspeed>=3.2.0",
    "pytest-cov>=6.1.1",
    "pytest-django>=4.11.1",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.5",
    "respx>=0.22.0",
    "types-mock>=5.2.0.20250516",
    "types-requests<2.31.0.7",    # this is pinned to an older version because of `urllib3` dependency
    "vcrpy>=7.0.0",
]
